Instead of raw-values, export resolved ConceptElementIds.